# auto-commit

./: Cargo.toml  PKGBUILD  README.md  install.sh
.deploy/: bump.sh
.github/workflows/: push.yml  release.yml
aur/auto-commit/: PKGBUILD
aur/auto-commit-bin/: PKGBUILD
aur/auto-commit-bin-git/: PKGBUILD
aur/auto-commit-git/: PKGBUILD
src/: main.rs
