[package]
license = "MIT"
edition = "2021"
version = "0.1.4"
name = "auto-commit"
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/m1guelpf/auto-commit"
repository = "https://github.com/m1guelpf/auto-commit"
description = "Automagically generate commit messages."
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]

[dependencies]
log = { version = "0.4.8", features = ["std"] }
env_logger = "0.9.1"
clap-verbosity-flag = "2.0.0"
tokio = { version = "0.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
openai-api = { git = "https://github.com/deontologician/openai-api-rust", branch = "main" }
spinners = "4.1.0"
rand = "0.8.5"
question = "0.2.2"
